--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,91 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-size: 14px;
+  font-family: "Helvetica", sans-serif;
+  background-color: rgb(155, 155, 155);
+}
+
+main {
+  display: grid;
+  max-width: 400px;
+  height: 500px;
+  margin: 100px auto;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto auto 1fr auto;
+  color: var(--main-font-color);
+  background-color: var(--bg-color-1);
+  transition: all 0.5s;
+  box-shadow: 5px 5px 15px -6px #8c8c8c;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+main.dark-mode {
+  --bg-color-1: #455054;
+  --bg-color-2: #308695;
+  --bg-color-3: rgba(75, 75, 75);
+  --main-font-color: rgb(200, 200, 200);
+  --alt-font-color: rgb(255, 255, 255);
+  --theme-primary: rgba(91, 13, 232, 1);
+  --theme-primary-gradient: linear-gradient(90deg,
+      rgba(91, 13, 232, 1) 0%,
+      rgba(121, 101, 220, 1) 100%);
+}
+
+
+/* Header */
+
+header {
+  padding: 0.5rem;
+  color: var(--alt-font-color);
+  background: var(--theme-primary-gradient);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+
+header h1 {
+  margin: 0;
+}
+
+.toggle-switch {
+  margin: 0.5rem;
+}
+
+.toggle-switch input {
+  display: none;
+}
+
+.toggle-switch label {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 20px;
+  background-color: var(--bg-color-1);
+  border-radius: 20px;
+}
+
+.toggle-switch label::after {
+  content: "";
+  position: absolute;
+  width: 18px;
+  height: 18px;
+  line-height: 20px;
+  padding-left: 2px;
+  border-radius: 50%;
+  background-color: var(--main-font-color);
+  top: 1px;
+  left: 1px;
+  transition: all 0.3s;
+}
+
+.toggle-switch input:checked+label::after {
+  left: 20px;
+}
+
+.toggle-switch input:checked+label {
+  background-color: var(--bg-color-1);
 }
