--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,13 @@
-body {
-  font-size: 14px;
-  font-family: "Helvetica", sans-serif;
-  background-color: rgb(155, 155, 155);
-}
+:root {
+  --light-color-1: #D4CFC9;
+  --dark-color-1: #455054;
+  --sec-color-1: #E69D45;
+  --sec-color-2: #D45769;
+  --light-header: #308695;
 
-main {
-  display: grid;
-  max-width: 400px;
-  height: 500px;
-  margin: 100px auto;
-  grid-template-columns: 1fr;
-  grid-template-rows: auto auto 1fr auto;
-  color: var(--main-font-color);
-  background-color: var(--bg-color-1);
-  transition: all 0.5s;
-  box-shadow: 5px 5px 15px -6px #8c8c8c;
+  --main-font-color: #D4CFC9;
+  --alt-font-color: rgb(255, 255, 255);
+
 }
 
 code {
@@ -22,37 +15,76 @@ code {
     monospace;
 }
 
+body,
+html {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  min-height: 100vh;
+}
+
+#root {
+  height: auto;
+  width: 100%;
+}
+
+main {
+  width: 100%;
+  min-height: 100vh;
+  color: var(-- alt-font-color);
+  background-color: var(--light-color-1);
+  transition: all 0.5s;
+
+  font-size: 14px;
+  font-family: "Helvetica", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 main.dark-mode {
-  --bg-color-1: #455054;
+  background-color: var(--dark-color-1);
+  /* --bg-color-1: #455054;
   --bg-color-2: #308695;
-  --bg-color-3: rgba(75, 75, 75);
-  --main-font-color: rgb(200, 200, 200);
-  --alt-font-color: rgb(255, 255, 255);
+  /* --bg-color-3: rgba(75, 75, 75); */
   --theme-primary: rgba(91, 13, 232, 1);
   --theme-primary-gradient: linear-gradient(90deg,
       rgba(91, 13, 232, 1) 0%,
       rgba(121, 101, 220, 1) 100%);
+
+  /* height: 100vh;
+  width: 100vw; */
+
 }
 
 
 /* Header */
 
 header {
-  padding: 0.5rem;
-  color: var(--alt-font-color);
-  background: var(--theme-primary-gradient);
   display: flex;
+  width: 100%;
+  padding: 1rem 0;
+  color: var(--light-color-1);
+  background: var(--light-header);
+  flex-direction: column;
   align-items: center;
   justify-content: space-between;
 }
 
+main.dark-mode header {
+  background-color: var(--light-header);
+  color: var(--dark-color-1)
+}
 
-header h1 {
-  margin: 0;
+
+#app-title {
+  padding: 0.5rem;
+
+
 }
 
 .toggle-switch {
-  margin: 0.5rem;
+  margin-left: 1rem;
+
 }
 
 .toggle-switch input {
@@ -64,7 +96,7 @@ header h1 {
   display: inline-block;
   width: 40px;
   height: 20px;
-  background-color: var(--bg-color-1);
+  background-color: var(--light-color-1);
   border-radius: 20px;
 }
 
@@ -76,16 +108,24 @@ header h1 {
   line-height: 20px;
   padding-left: 2px;
   border-radius: 50%;
-  background-color: var(--main-font-color);
+  background-color: var(--light-header);
   top: 1px;
   left: 1px;
+  transform: scale(.8);
+  transform-origin: center;
   transition: all 0.3s;
 }
 
 .toggle-switch input:checked+label::after {
-  left: 20px;
+  left: 19px;
 }
 
 .toggle-switch input:checked+label {
-  background-color: var(--bg-color-1);
+  background-color: var(--dark-color-1);
+}
+
+.test-block {
+  height: 10vh;
+  width: 100vh;
+  border: 1px solid deeppink;
 }
