refactor routing to conform to v6 conventions, refactor TripList.js and Trip.js to destructure props all within Trip component, useNavigate hook in App.js to dynamically update url via handleTripClick, get tripId from useParams in TripDetail component to fetch data from specific id json object

--- a/src/index.css
+++ b/src/index.css
@@ -129,3 +129,28 @@ main.dark-mode header {
   width: 100vh;
   border: 1px solid deeppink;
 }
+
+/* trips-container */
+
+.trips-container {
+  display: flex;
+  height: 70vh;
+
+}
+
+.trips-list,
+.trips-view {
+
+  height: 100%;
+  width: 100%;
+}
+
+
+.trips-view {}
+
+.trip-card {}
+
+.trip-card.selected {
+  border: 1px solid red;
+
+}
