--- a/src/Components/Modal.module.css
+++ b/src/Components/Modal.module.css
@@ -17,8 +17,18 @@
 }
 
 .modal {
-    width: 250px;
-    height: 170px;
+    width: 300px;
+    height: 200px;
+    background: white;
+    color: white;
+    z-index: 10;
+    border-radius: 16px;
+    box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.04);
+}
+
+.tripModal {
+    width: 600px;
+    height: 500px;
     background: white;
     color: white;
     z-index: 10;
@@ -48,7 +58,49 @@
     font-size: 14px;
     color: #2c3e50;
     text-align: center;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
 }
+
+.formContent {
+    /* width: 80%;
+    margin: 0 10% 16px 10%;
+    padding: 16px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box; */
+    padding: 10px;
+    font-size: 14px;
+    color: #2c3e50;
+    text-align: center;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+
+}
+
+.field:hover {
+    background-color: rgba(255, 255, 255, 0.45);
+    box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.05);
+}
+
+.formContent input {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+.formContent ::placeholder {
+    font-size: large;
+
+}
+
 
 .modalActions {
     position: absolute;
@@ -100,7 +152,27 @@
     transition: all 0.25s ease;
 }
 
+.deleteBtn_trip {
+    margin-top: 10px;
+    margin-left: 25%;
+    cursor: pointer;
+    font-weight: 500;
+    padding: 11px 28px;
+    border-radius: 12px;
+    font-size: 0.8rem;
+    border: none;
+    color: #fff;
+    background: #ff3e4e;
+    transition: all 0.25s ease;
+}
+
 .deleteBtn:hover {
+    box-shadow: 0 10px 20px -10px rgba(255, 62, 78, 0.6);
+    transform: translateY(-5px);
+    background: #ff3e4e;
+}
+
+.deleteBtn_trip:hover {
     box-shadow: 0 10px 20px -10px rgba(255, 62, 78, 0.6);
     transform: translateY(-5px);
     background: #ff3e4e;
@@ -108,6 +180,32 @@
 
 .cancelBtn {
     margin-top: 10px;
+    margin-right: 10%;
+    cursor: pointer;
+    font-weight: 500;
+    padding: 11px 28px;
+    border-radius: 12px;
+    font-size: 0.8rem;
+    border: none;
+    color: #2c3e50;
+    background: #fcfcfc;
+    transition: all 0.25s ease;
+}
+
+.cancelBtn_trip {
+    /* margin-top: 10px;
+    margin-right: 25%;
+    cursor: pointer;
+    font-weight: 500;
+    padding: 11px 28px;
+    border-radius: 12px;
+    font-size: 0.8rem;
+    border: none;
+    color: #2c3e50;
+    background: #fcfcfc;
+    transition: all 0.25s ease; */
+    margin-top: 10px;
+    margin-right: 25%;
     cursor: pointer;
     font-weight: 500;
     padding: 11px 28px;
@@ -120,6 +218,12 @@
 }
 
 .cancelBtn:hover {
+    box-shadow: none;
+    transform: none;
+    background: whitesmoke;
+}
+
+.cancelBtn_trip:hover {
     box-shadow: none;
     transform: none;
     background: whitesmoke;
