create fetch inside handleTripCreation function in CreateTripMoal.js, persists new trip in backend, invoke callback function onAddTrip to update trips list in front end

--- a/src/index.css
+++ b/src/index.css
@@ -155,7 +155,7 @@ main.dark-mode .trips-container {
 
 .trips-view {
   width: 75%;
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
   padding: 1rem;
   display: flex;
   flex-direction: column;
